# MxOps

./: .gitignore  .pylintrc  .pyspelling.yml  .readthedocs.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TODO_FIX.md  note.md  pyproject.toml  requirements-dev.txt  requirements.txt  scene_checks_example.yaml  setup.cfg  setup.py  testnet.toml
.claude/: settings.json
.claude/skills/: check-code.md  integration-test.md  run-tests.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-bump.yaml  pypi-publish.yaml  python-build.yaml  python-ci.yaml  python-code-check.yaml  python-publish-build.yaml  python-pytest.yaml
docs/: data.md  scene.md
docs/dictionary/: custom_wordlist.txt  multiversx_wordlist.txt  project_wordlist.txt  sphinx_wordlist.txt
docs/source/: conf.py  index.rst
examples/first_scene/: first_scene.yaml
integration_tests/: .gitignore  README.md  xnetwork_config.json
integration_tests/.devcontainer/: devcontainer.json
integration_tests/contracts/: Cargo.toml
integration_tests/contracts/esdt-minter/: Cargo.toml
integration_tests/contracts/esdt-minter/meta/: Cargo.toml
integration_tests/contracts/esdt-minter/meta/src/: main.rs
integration_tests/contracts/esdt-minter/src/: lib.rs
integration_tests/contracts/esdt-minter/wasm/: Cargo.toml
integration_tests/contracts/esdt-minter/wasm/src/: lib.rs
integration_tests/contracts/piggy-bank/meta/: Cargo.toml
integration_tests/contracts/piggy-bank/meta/src/: main.rs
integration_tests/contracts/piggy-bank/src/: esdt_minter_proxy.rs  lib.rs
integration_tests/contracts/piggy-bank/wasm/: Cargo.toml
integration_tests/contracts/piggy-bank/wasm/src/: lib.rs
integration_tests/contracts/tests/: test.rs
integration_tests/contracts/tests/common/: blockchain_mod.rs  esdt_minter_mod.rs  piggy_bank_mod.rs
integration_tests/data_store/: README.md
integration_tests/data_store/data-store/: Cargo.toml
integration_tests/data_store/data-store/meta/: Cargo.toml
integration_tests/data_store/data-store/meta/src/: main.rs
integration_tests/data_store/data-store/src/: data_store.rs
integration_tests/data_store/data-store/wasm/: Cargo.toml
integration_tests/data_store/data-store/wasm/src/: lib.rs
integration_tests/ledger_test/: mxops_scene.yaml  run_test.sh
integration_tests/piggy_bank/: .gitignore  Cargo.toml  README.md
integration_tests/piggy_bank/contracts/: Cargo.toml
integration_tests/piggy_bank/contracts/esdt-minter/: Cargo.toml
integration_tests/piggy_bank/contracts/esdt-minter/meta/: Cargo.toml
integration_tests/piggy_bank/contracts/esdt-minter/meta/src/: main.rs
integration_tests/piggy_bank/contracts/esdt-minter/src/: lib.rs
integration_tests/piggy_bank/contracts/esdt-minter/wasm/: Cargo.toml
integration_tests/piggy_bank/contracts/esdt-minter/wasm/src/: lib.rs
integration_tests/piggy_bank/contracts/piggy-bank/: Cargo.toml
integration_tests/piggy_bank/contracts/piggy-bank/meta/: Cargo.toml
integration_tests/piggy_bank/contracts/piggy-bank/meta/src/: main.rs
integration_tests/piggy_bank/contracts/piggy-bank/src/: esdt_minter_proxy.rs  lib.rs
integration_tests/piggy_bank/contracts/piggy-bank/wasm/: Cargo.toml
integration_tests/piggy_bank/contracts/piggy-bank/wasm/src/: lib.rs
integration_tests/piggy_bank/contracts/tests/: test.rs
integration_tests/piggy_bank/contracts/tests/common/: blockchain_mod.rs  esdt_minter_mod.rs  mod.rs  piggy_bank_mod.rs
integration_tests/scenes/: 01_esdt_minter_init.yaml  02_piggy_bank_init.yaml  03_airdrop.yaml  04_money_print.yaml
integration_tests/scripts/: build_wasm.sh  cargo_force_clean.sh  checks.py  setup.sh
integration_tests/setup_scenes/: 01_accounts.yaml  02_egld_distribution.yaml  02a_chain_simulator_faucet.yaml  02b_r3d4_faucet.yaml
integration_tests/wallets/: devnet_owner.pem  devnet_user.pem  emmanuel.pem  françois.pem  jacques.pem  jean.pem  marc.pem  marie.pem  marthe.pem  paul.pem  pierre.pem  thomas.pem
mvxops/: __main__.py  enums.py  errors.py
mvxops/config/: __init__.py  cli.py  config.py
mvxops/data/: cli.py  data.py  path.py
mvxops/execution/: account.py  cli.py  contract_interactions.py  network.py  scene.py  steps.py  utils.py
mvxops/resources/: data_parser_help.txt  default_config.ini  parser_help.txt
mvxops/utils/: __init__.py  logger.py  msc.py
mxops/: __init__.py  __main__.py  enums.py  errors.py
mxops/analyse/: agglomerate.py  fetching.py  plots.py
mxops/analyze/: agglomerate.py  cli.py  fetching.py  plots.py
mxops/cli/: __init__.py  config_cli.py  data_cli.py  execution_cli.py  main_cli.py
mxops/common/: __init__.py  constants.py  providers.py
mxops/config/: __init__.py  cli.py  config.py  utils.py
mxops/data/: __init__.py  analyse_data.py  analyze_data.py  cli.py  data.py  data_cache.py  execution_data.py  path.py  utils.py
mxops/execution/: __init__.py  account.py  checks.py  cli.py  legacy_checks.py  (+13 more)
scripts/: auto_bump.py  build.sh  build_auto_completion_yaml.py  build_doc.sh  changelog_release.sh  check_python_code.sh  launch_integration_tests.sh  launch_tests.sh  launch_unit_tests.sh  local_checks.sh  run_examples.sh  run_integration_tests.sh  run_tutorials.sh  start_new_localnet.sh
tests/: conftest.py  test_account_storage.py  test_accounts.py  test_chain_simulator.py  test_check_transfers.py  test_checks.py  test_core_builders.py  test_data_io.py  test_data_load.py  test_execution_data.py  test_execution_utils.py  test_instantiate.py  test_legacy_checks.py  test_legacy_steps.py  test_msc_steps.py  test_providers.py  test_raise_tx_errors.py  test_scenario_data.py  test_setup_steps.py  test_smart_contract_steps.py  test_smart_values.py  test_step.py  test_steps.py  test_token_management.py  test_token_managment.py  test_transaction_steps.py  test_transfers_extraction.py  test_utils.py  utils.py
tutorials/trader/contract/: .gitignore  Cargo.toml
tutorials/trader/contract/meta/src/: main.rs
tutorials/trader/contract/src/: trader_sc.rs
tutorials/trader/contract/wasm/src/: lib.rs
xops/: __init__.py  __main__.py  enums.py  errors.py
(+270 files in other folders)
