[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "mvxops"
version = "0.1.0"
authors = [
  { name="Etienne Wallet", email="etienne.wallet@catenscia.com" },
]
description = "Python package to automate MultiversX smart contracts deployment and contract interactions in general"
readme = "README.md"
keywords = ["elrond", "multiversx", "smart-contract", "devops"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dynamic = ["dependencies"]

[project.scripts]
mvxops = "mvxops.__main__:main"


[tool.setuptools.packages.find]
where = ["."]
include = ["mvxops*"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.txt", "*.ini"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[project.urls]
"Homepage" = "https://github.com/Catenscia/MvxOps"