[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "mxops"
version = "3.0.0"
authors = [
  {name="Etienne Wallet"},
]
description = "Python package to automate MultiversX smart contracts deployment and contract interactions in general"
readme = "README.md"
keywords = ["elrond", "multiversx", "smart-contract", "devops", "tests"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "appdirs~=1.4.4",
    "configparser~=7.1.0",
    "dateparser>=1.2.1",
    "importlib-resources~=6.5.2",
    "matplotlib~=3.10.0",
    "multiversx-sdk~=1.1.0",
    "pyyaml~=6.0.2",
    "simpleeval~=1.0.3",
    "sphinx-design>=0.6.1",
    "sphinx-material>=0.0.36"
]

[project.scripts]
mxops = "mxops.__main__:main"

[project.urls]
"Homepage" = "https://github.com/Catenscia/MxOps"

[tool.setuptools.packages.find]
where = ["."]
include = ["mxops*"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.txt", "*.ini"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:ssl.PROTOCOL_TLS is deprecated:DeprecationWarning",
    "ignore:ssl.match_hostname\\(\\) is deprecated:DeprecationWarning",
]

[dependency-groups]
dev = [
    "bandit>=1.8.2",
    "black>=24.10.0",
    "build>=1.2.2.post1",
    "bump2version>=1.0.1",
    "coverage>=7.6.10",
    "flake8>=7.1.1",
    "ipykernel>=6.29.5",
    "myst-parser>=4.0.0",
    "pep8>=1.7.1",
    "pylint>=3.3.3",
    "pyspelling>=2.10",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "ruamel-yaml>=0.18.10",
    "ruff>=0.9.3",
    "setuptools>=75.8.0",
    "sphinx>=8.1.3",
    "sphinx-material>=0.0.36",
]
