[package]
name = "data-store"
version = "0.0.0"
authors = ["Etienne Wallet"]
edition = "2021"
publish = false

[lib]
path = "src/data_store.rs"
[dependencies.multiversx-sc]
version = "0.46.1"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.46.1"

[workspace]
members = [".", "meta"]
