[package]
name = "contracts-tests"
version = "0.0.0"
edition = "2018"
publish = false

[dev-dependencies]
num-bigint = "0.4.2"

[dependencies.multiversx-sc]
version = "0.39.5"

[dev-dependencies.esdt-minter]
path = "esdt-minter"

[dev-dependencies.piggy-bank]
path = "piggy-bank"

[dev-dependencies.multiversx-sc-scenario]
version = "0.39.5"