[package]
name = "contracts-tests"
version = "0.0.0"
edition = "2021"
publish = false

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.esdt-minter]
path = "esdt-minter"

[dev-dependencies.piggy-bank]
path = "piggy-bank"

[dev-dependencies.multiversx-sc-scenario]
version = "0.64.1"
[dependencies.multiversx-sc]
version = "0.64.1"
