[package]
name = "esdt-minter"
version = "0.0.0"
authors = [ "Etienne Wallet",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dependencies.multiversx-sc]
version = "0.39.5"

[dependencies.multiversx-sc-modules]
version = "0.39.5"

[dev-dependencies.multiversx-sc-scenario]
version = "0.39.5"