[package]
name = "esdt-minter-meta"
version = "0.0.0"
edition = "2018"
publish = false
authors = [ "Etienne Wallet",]

[dependencies.esdt-minter]
path = ".."

[dependencies.multiversx-sc]
version = "0.39.5"

[dependencies.multiversx-sc-meta]
version = "0.39.5"

[dependencies.multiversx-sc-wasm-adapter]
version = "0.39.5"